--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,9 @@ body {
 canvas {
     margin: auto;
     background: #fff;
+    box-shadow: 0 0 20px #cccccc;
+    border-radius: .25rem;
+    overflow: hidden;
 }
 
 @media (min-width: 640px) {}
